# oe-bugs

./: CMakeLists.txt  README.md
bug1/: CMakeLists.txt  enclave.cc  host.cc  test.edl
cmake/: oeedl_file.cmake
shared/: enclave_error.h  props.cc
